--- a/style.css
+++ b/style.css
@@ -14,8 +14,14 @@
     
 }
 
+.input-deco{
+    border-radius: 5px;
+    color: white;
+}
+
+
 .btn-cinza{
     border-radius: 10px;
     margin-top: 5px;
-    
+
 }
