--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-.containe{
-    align-items:  center;
-    padding: 20px;
+.container{
+    
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center;    /* Centraliza verticalmente */
+    height: 100vh;          /* Para que o corpo ocupe toda a altura da tela */
+    background-color: rgb(118, 125, 226);
+
 }
 
 .dados{
 
-    border: 2px solid black;
+    border: 2px solid rgb(248, 248, 248);
     border-radius: 20px;
     padding: 20%;
-    background: gray;
-    width: 100vh;
-    height: 100vh;
+    background: rgb(245, 195, 129);
+    width: 40vh;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center;
+    display: flex;
     
 }
 
@@ -24,4 +31,8 @@
     border-radius: 10px;
     margin-top: 5px;
 
+}
+
+.input-2{
+    margin-top: 10px;
 }
